--- a/Templates/index3.html
+++ b/Templates/index3.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container text-center">
+        <h1>Lựa chọn giải đấu</h1>
         <div class="logo-row">
             <div class="logo-namegame">
                 <button id="game-logo">
