--- a/Templates/index.html
+++ b/Templates/index.html
@@ -32,6 +32,7 @@
 </head>
 <body>
     <div class="container text-center">
+        <h1>Lựa chọn giải đấu</h1>
         <div class="logo-row">
             <div class="logo-namegame">
                 <button id="game-logo">
