--- a/Templates/index2.html
+++ b/Templates/index2.html
@@ -38,7 +38,7 @@
             <div class="logo-namegame">
                 <button id="game-logo">
                     <a href="{{ url_for('home') }}" target="_blank" rel="noopener noreferrer">
-                    <img src="{{ url_for('static', filename='logogame.svg') }}" alt="Game Logo">
+                        <img src="{{ url_for('static', filename='logogame.jpg') }}" alt="Game Logo">
                     </a>
                 </button>
             </div>
